# vouchervault

./: README.md  contact_details.txt  veto.txt
gideon/: .gitignore  .solitarc.js  README.md  package-lock.json  package.json  tsconfig.json
gideon/program/: Cargo.toml
gideon/program/src/: error.rs  instruction.rs  lib.rs  processor.rs
gideon/program/src/instructions/: burn.rs  create.rs  escrow.rs  expired.rs  init_authority.rs  mint.rs  mod.rs
gideon/program/src/state/: authority.rs  escrow.rs  mod.rs
gideon/tests/: test.ts  uri.ts
viper/: .gitignore  .solitarc.js  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
viper/data/: companyWalletAddresses.json  influencerInfo.json
viper/src/: react-qr-scanner.d.ts  theme.ts
viper/src/app/: globals.css  layout.tsx  page.tsx
viper/src/app/components/: Analytics.tsx  Header.tsx  IssuedVouchers.tsx  ScanNowSection.tsx  ScrollToTop.tsx  SolanaWalletProvider.tsx  SuccessBanner.tsx  TransferHistory.tsx  VoucherList.tsx  VoucherReceipt.tsx
viper/src/components/: AppBar.tsx  CustomThemeProvider.tsx  DashboardBanner.tsx  Footer.tsx  Header.tsx  ImageUploadPreview.tsx  Notification.tsx  RecentTransactions-copy.tsx  Sidebar.tsx  ThemeToggleButton.tsx  VoucherList-copy.tsx
viper/src/hooks/: transactionHooks.tsx
viper/src/pages/: _app.tsx  index-copy.tsx  login.tsx  user-type.tsx
viper/src/stores/: useNotificationStore.tsx  useUserSOLBalanceStore.tsx
viper/src/styles/: globals.css
viper/src/utils/: CurrencyConverter.ts  TokenUtils.ts  VoucherData.ts  uri.tsx
(+13 files in other folders)
