[package]
name = "gideon"
version = "0.1.0"
edition = "2021"

[lib]
name = "gideon"
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
shank = "0.4.2"
solana-program = "2.0.3"
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "4.0.1", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.4.0"
thiserror = "1.0.63"
